rework german preset - replace png by svg icons - raise height from 40 to 50 px for better readability - fix Einbahnstraße icon (sign 267 (Verbot der Einfahrt) does not imply oneway=yes, if used without sign 220 on the ground it is a "falsche Einbahnstraße") - update sign 256 to 257-50, 258 to 257-51, 1048-12 to 1010-51, 1052-36 to 1053-35 - update wording "Gewicht" to "Masse"

--- a/applications/editors/josm/plugins/roadsigns/README
+++ b/applications/editors/josm/plugins/roadsigns/README
@@ -15,8 +15,9 @@ Acknowledgements:
     Basically, this plugin is a port to Java and the JOSM (plugin) framework.
     [1] http://osmtools.de/traffic_signs/
 
-    Pics for the German preset have been derived from
-        http://de.wikipedia.org/wiki/Bildtafel_der_Verkehrszeichen_in_Deutschland (german street sign SVGs)
+    German street sign SVGs have been derived from
+    https://de.wikipedia.org/wiki/Bildtafel_der_Verkehrszeichen_in_der_Bundesrepublik_Deutschland_seit_2017,
+    resized to a height of 50px and cleaned with svg cleaner.
 
 
 JavaCC usage:
