add a traget to extract pot file for a single plugin

--- a/applications/editors/josm/i18n/build.xml
+++ b/applications/editors/josm/i18n/build.xml
@@ -128,6 +128,11 @@
             </path>
         </foreach>
     </target>
+    <target name="singlepluginpot" depends="init">
+        <gettext-extract keysFile="josm.pot" poDirectory="po" keywords="${gettext.keywords}">
+            <fileset dir="${plugin.dir}/${plugin}"/>
+        </gettext-extract>
+    </target>
     <target name="singleplugintrans" depends="init">
         <antcall target="plugintrans">
             <param name="path" value="${plugin}"/>
